@@ -19,15 +19,20 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-import javax.annotation.Nullable;
 import javax.net.ssl.SSLContext;
 import javax.net.ssl.TrustManager;
 import javax.net.ssl.X509TrustManager;
 
-import org.apache.http.client.HttpClient;
-import org.apache.http.conn.ssl.NoopHostnameVerifier;
-import org.apache.http.conn.ssl.SSLConnectionSocketFactory;
-import org.apache.http.impl.client.HttpClientBuilder;
+import org.apache.hc.client5.http.impl.classic.CloseableHttpClient;
+import org.apache.hc.client5.http.impl.classic.HttpClientBuilder;
+import org.apache.hc.client5.http.impl.classic.HttpClients;
+import org.apache.hc.client5.http.impl.io.BasicHttpClientConnectionManager;
+import org.apache.hc.client5.http.socket.ConnectionSocketFactory;
+import org.apache.hc.client5.http.socket.PlainConnectionSocketFactory;
+import org.apache.hc.client5.http.ssl.NoopHostnameVerifier;
+import org.apache.hc.client5.http.ssl.SSLConnectionSocketFactory;
+import org.apache.hc.core5.http.config.Registry;
+import org.apache.hc.core5.http.config.RegistryBuilder;
 import org.apache.shiro.SecurityUtils;
 import org.apache.shiro.authc.AccountException;
 import org.apache.shiro.authc.AuthenticationException;
@@ -54,6 +59,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.client.HttpComponentsClientHttpRequestFactory;
+import org.springframework.lang.Nullable;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.ResourceAccessException;
 import org.springframework.web.client.RestTemplate;
@@ -140,8 +146,7 @@ public class ObibaRealm extends AuthorizingRealm {
       RestTemplate template = newRestTemplate();
       HttpHeaders headers = new HttpHeaders();
       headers.set(APPLICATION_AUTH_HEADER, getApplicationAuth());
-      if (token instanceof UsernamePasswordOtpToken) {
-        UsernamePasswordOtpToken otpToken = (UsernamePasswordOtpToken) token;
+      if (token instanceof UsernamePasswordOtpToken otpToken) {
         if (otpToken.hasOtp())
           headers.set("X-Obiba-TOTP", otpToken.getOtp());
       }
@@ -178,19 +183,19 @@ public class ObibaRealm extends AuthorizingRealm {
       if (log.isDebugEnabled())
         log.error("Connection failure with identification server", e);
       else
-        log.error(String.format("Connection failure with identification server: [%s]", e.getMessage()));
+        log.error("Connection failure with identification server: [%s]".formatted(e.getMessage()));
       return null;
     } catch(ResourceAccessException e) {
       if (log.isDebugEnabled())
         log.error("Connection failure with identification server", e);
       else
-        log.error(String.format("Connection failure with identification server: [%s]", e.getMessage()));
+        log.error("Connection failure with identification server: [%s]".formatted(e.getMessage()));
       return null;
     } catch(Exception e) {
       if (log.isDebugEnabled())
         log.error("Authentication failure", e);
       else
-        log.error(String.format("Authentication failure: [%s]", e.getMessage()));
+        log.error("Authentication failure: [%s]".formatted(e.getMessage()));
       throw new AuthenticationException("Failed authenticating on " + baseUrl, e);
     }
   }
@@ -223,7 +228,7 @@ public class ObibaRealm extends AuthorizingRealm {
       log.info("Invalid ticket. Response status code [{}], response body [{}], ticket used [{}]", response.getStatusCode(), response.getBody(), token);
       return null;
     } catch(HttpClientErrorException|ResourceAccessException e) {
-      log.error(String.format("Impossible to contact identification server: [%s]", e.getMessage()), e);
+      log.error("Impossible to contact identification server: [%s]".formatted(e.getMessage()), e);
       return null;
     } catch(Exception e) {
       throw new AuthenticationException("Failed authenticating on " + baseUrl, e);
@@ -288,7 +293,7 @@ public class ObibaRealm extends AuthorizingRealm {
       try {
         String[] webTokenParts = ((String) principal).split("\\.");
         if(webTokenParts.length > 1) {
-          String webToken = String.format("%s.%s.", webTokenParts[0], webTokenParts[1]); //do not validate signature
+          String webToken = "%s.%s.".formatted(webTokenParts[0], webTokenParts[1]); //do not validate signature
           return Jwts.parser().parse(webToken);
         }
       } catch(MalformedJwtException e) {
@@ -381,10 +386,17 @@ public class ObibaRealm extends AuthorizingRealm {
     }
   }
 
-  private HttpClient createHttpClient() {
-    HttpClientBuilder builder = HttpClientBuilder.create();
+  private CloseableHttpClient createHttpClient() {
+    HttpClientBuilder builder = HttpClients.custom();
     try {
-      builder.setSSLSocketFactory(getSocketFactory());
+      SSLConnectionSocketFactory sslsf = getSocketFactory();
+      Registry<ConnectionSocketFactory> socketFactoryRegistry = RegistryBuilder.<ConnectionSocketFactory> create()
+          .register("https", sslsf)
+          .register("http", new PlainConnectionSocketFactory())
+          .build();
+      BasicHttpClientConnectionManager connectionManager =
+          new BasicHttpClientConnectionManager(socketFactoryRegistry);
+      builder.setConnectionManager(connectionManager);
     } catch(NoSuchAlgorithmException | KeyManagementException e) {
       throw new RuntimeException(e);
     }
